--- a/src/pages/receptionist_pages/dash_board/dash_board.module.css
+++ b/src/pages/receptionist_pages/dash_board/dash_board.module.css
@@ -54,6 +54,7 @@
     border: none;
     padding: 10px 15px;
     border-radius: 5px;
+    transition:all 0.3s ease;
 }
 .input{
     height:70%;
@@ -189,15 +190,15 @@
     border: 1px solid #2E2E2E;
 }
 
-/* --- RECENT ALERTS ROW BELOW --- */
-.alertsSection {
-    margin-top: 20px;
-    grid-column: 1 / 3; /* full width */
-    background-color: #1E1E1E;
-    border-radius: 12px;
-    padding: 20px;
-    min-height: 200px;
-    border: 1px solid #2E2E2E;
+.addNewAppointment:hover {
+    background-color: rgb(12, 102, 171);
+    transform: scale(1.08);
+    box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    cursor: pointer;
+
 }
 
-
+.input:focus{
+    outline: none;
+    box-shadow: 0 0 5px rgb(32, 143, 240);
+}
