--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,11 @@ body{
     font-family: 'arial';
 }
 
+#root{
+    height: 100%;
+    width: 100%;
+}
+
 .logo{
     display: flex;
     align-items: center;
