docManagement page complete

--- a/src/pages/signin_page/signin_page.module.css
+++ b/src/pages/signin_page/signin_page.module.css
@@ -3,7 +3,7 @@
     padding: 0;
     height: 100dvh;
     width: 100dvw;
-    background-color: #121212;
+    background-color: #121417;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -19,24 +19,24 @@
     font-weight: bold;
     margin: 0;
     width: auto;
-    color: #ffffff;
+    color: #e8ecf2;
 }
 
 .signinBody h2 {
     font-size: 1.5em;
     margin: 0;
     width: auto;
-    color: #e0e0e0;
+    color: #9aa5b5;
 }
 
 .signinBody p {
     font-size: 0.8em;
     margin: 0;
-    color: #b0b0b0;
+    color: #9aa5b5;
 }
 
 .signinCard {
-    background-color: #1e1e1e;
+    background-color: #1e2228;
     padding: 28px;
     margin: 20px;
     height: auto;
@@ -49,7 +49,9 @@
     justify-content: space-evenly;
 }
 
-.signinCard div, .signinCard h5, .signinCard input {
+.signinCard div,
+.signinCard h5,
+.signinCard input {
     margin: 1px;
 }
 
@@ -60,7 +62,7 @@
 }
 
 .signinCard h5 {
-    color: #cccccc;
+    color: #e8ecf2;
 }
 
 .signinCard .text {
@@ -73,14 +75,14 @@
     max-height: 40px;
     min-width: 250px;
     max-width: 500px;
-    border: 0.5px solid #555555;
-    background-color: #2a2a2a;
-    color: #e0e0e0;
+    border: 0.5px solid #2a2f36;
+    background-color: #2a2f36;
+    color: #e8ecf2;
 }
 
 .signinCard .text:focus {
-    outline: 0.5px solid #4a90ff;
-    background-color: #333333;
+    outline: 0.5px solid #4da3ff;
+    background-color: #2a2f36;
 }
 
 .utils {
@@ -98,20 +100,21 @@
     width: 100%;
     display: inline-flex;
     gap: 5px;
-    color: #b0b0b0;
+    color: #9aa5b5;
 }
 
 .rememberMeDude input {
-    border: 0.5px solid #555555;
-    background-color: #2a2a2a;
+    border: 0.5px solid #2a2f36;
+    background-color: #2a2f36;
 }
 
 a {
     text-decoration: none;
+    color: #4da3ff;
 }
 
 .utils a p {
-    color: #4a90ff;
+    color: #4da3ff;
 }
 
 .loginBtn {
@@ -120,7 +123,7 @@ a {
     max-height: 40px;
     min-width: 250px;
     max-width: 500px;
-    background-color: #4a90ff;
+    background-color: #4da3ff;
     color: white;
     border-radius: 5px;
     border: none;
@@ -128,11 +131,12 @@ a {
 }
 
 .loginBtn:hover {
-    background-color: #3571c6;
+    background-color: #4da3ff;
+    opacity: 0.8;
 }
 
 .loginBtn:disabled {
-    background-color: rgba(53, 113, 198, 0.6);
+    background-color: rgba(77, 163, 255, 0.6);
     cursor: not-allowed;
 }
 
@@ -160,14 +164,8 @@ a {
     }
 }
 
-@media (max-width: 480px) {
-    /*  */
-}
+@media (max-width: 480px) { }
 
-@media (max-width: 1024px) {
-    /*  */
-}
+@media (max-width: 1024px) { }
 
-@media (max-width: 1280px) {
-    /*  */
-}
+@media (max-width: 1280px) { }
