debugged & refactored doc_management

--- a/src/reusable_components/receptionist_sidebar/receptionist_sidebar.module.css
+++ b/src/reusable_components/receptionist_sidebar/receptionist_sidebar.module.css
@@ -117,3 +117,261 @@
 .logout{
     color: #ff5f5f;
 }
+
+@media (max-width: 870px){
+    .sidebar span{
+        display: none;
+    }
+
+    .sidebar .utilities .utilOptions{
+        display: block;
+    }
+
+    .sidebar .utilities button{
+        width: auto;
+        height: auto;
+        border-radius: 50%;
+        padding: 10px;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .sidebar .sidebarOptions{
+        height: auto;
+        width: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0;
+        padding: 0;
+        gap: 10px;
+    }
+
+    .sidebar .sidebarOptions button{
+        width: auto;
+        height: auto;
+        border-radius: 50%;
+        padding: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .sidebar .hospitalBranding{
+        height: auto;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0;
+        padding: 0;
+        padding-top: 30px;
+        padding-left: 5px;
+        padding-bottom: 30px;
+    }
+
+    .sidebar .hospitalBranding .logo{
+        height: 40px;
+        width: 40px;
+        padding: 0;
+        margin: 0;
+        border-radius: 50%;
+        background-color: #2a2f36;
+    }
+
+    .sidebar{
+        width: auto;
+        padding: 0;
+    }
+}
+
+@media (max-width: 600px){
+
+    .sidebarAtTop{
+        width: 100dvw;
+        height: auto;
+        display: flex;
+        justify-content: space-between;
+        padding: 0;
+        margin: 0;
+        background-color: #1c1f25;
+        border-bottom: 1px solid #2a2f36;
+    }
+
+    .ensureTogether{
+        height: 100%;
+        width: 50%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 10px;
+    }
+
+    .sidebarAtTop .utilities button{
+        display: none;
+    }
+
+    .sidebarAtTop .utilities{
+        height: 100%;
+        flex: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .sidebarAtTop .sidebarOptions{
+        width: 50%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-end;
+        gap: 10px;
+    }
+
+    .sidebarAtTop .sidebarOptions span{
+        display: none;
+    }
+
+    .sidebarAtTop .sidebarOptions button{
+        background-color: transparent;
+        border: none;
+    } .sidebarAtTop .sidebarOptions .utilOptions{
+        color: #e8ecf2;
+    }
+
+    .doctorManagementBody{
+        padding: 0;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100dvh;
+        width: 100dvw;
+        background-color: #121417;
+        color: #e8ecf2;
+    }
+
+    .sidebar{
+        display: none;
+    }
+}
+
+@media (max-width: 550px){
+    .searchBarDiv{
+        width: auto;
+        height: auto;
+        background-color: #2a2f36;
+        border-radius: 8px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding-left: 10px;
+        gap: 5px;
+    }
+
+    .searchBarDiv input{
+        min-width: 230px;
+        max-width: 350px;
+        height: 20px;
+        border-radius: 8px;
+        font-size: 0.75em;
+        border: none;
+        outline: none;
+        padding: 5px;
+        background-color: transparent;
+        caret-color: #e8ecf2;
+        color: #e8ecf2;
+        letter-spacing: 1px;
+    }
+}
+
+@media (max-width: 500px){
+    .topMost .addDocBtn{
+        display: none;
+    }
+
+    .mainDiv .managementBody .topMost .fallbackAddDocBtn{
+        display: block;
+    }
+}
+
+@media (max-width: 430px){
+    .searchBarDiv input{
+        min-width: 150px;
+        max-width: 350px;
+        height: 20px;
+        border-radius: 8px;
+        font-size: 0.75em;
+        border: none;
+        outline: none;
+        padding: 5px;
+        background-color: transparent;
+        caret-color: #e8ecf2;
+        color: #e8ecf2;
+        letter-spacing: 1px;
+    }
+
+    .mainDiv .managementBody .existingDocs .headers{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding-top: 5px;
+        padding-bottom: 10px;
+        width: calc(100% - 20px);
+        position: relative;
+        left: 10px;
+        height: auto;
+        border-bottom: 1px solid #3b4754;
+        color: #9aa5b5;
+    }
+
+    .mainDiv .managementBody .existingDocs .headers .docName{
+        text-align: center;
+        font-size: 0.8em;
+        padding-left: 0px;
+        letter-spacing: 0.5px;
+        flex: 1;
+    }
+
+    .mainDiv .managementBody .existingDocs .headers .actions{
+        font-size: 0.8em;
+        letter-spacing: 0.5px;
+        width: 50%;
+        text-align: center;
+    }
+
+    .mainDiv .managementBody .docDiv{
+        height: auto;
+        width: calc(100% - 20px);
+        display: flex;
+        align-items: center;
+        margin-top: 10px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        position: relative;
+        left: 10px;
+        border: 1px solid #3b47548e;
+        border-radius: 8px;
+        background-color: #1e2228;
+    }
+
+    .mainDiv .managementBody .docDiv .docPfp{
+        display: none;
+    }
+
+    .mainDiv .managementBody .docDiv p{
+        text-align: center;
+        font-size: 0.8em;
+        padding-left: 0px;
+        letter-spacing: 0.5px;
+        flex: 1;
+    }
+
+    .mainDiv .managementBody .docDiv .actionBtns{
+        font-size: 0.8em;
+        letter-spacing: 0.5px;
+        width: 50%;
+        text-align: center;
+    }
+}
