--- a/src/pages/receptionist_pages/appointment_management/appointment_management.module.css
+++ b/src/pages/receptionist_pages/appointment_management/appointment_management.module.css
@@ -21,14 +21,7 @@
     align-items: center;
     justify-content: space-around;
 }
-.inputContainer{
-    height: 22%;
-    width: 95%;
-    background-color: #3b4754;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
+
 .data{
     height: 62%;
     width: 95%;
@@ -65,12 +58,45 @@
     font-size: 1.05rem;
 }
 .inputBox{
-    height:40%;
+    height:50%;
     width:100%;
     background-color: rebeccapurple;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.scrollDowns{
-    height:40%;
-    width:100%;
-    background-color: red;
+.scrollDowns {
+    height: 50%;
+    width: 100%;
+    background-color: rgb(45, 40, 49);
+
+    display: flex;
+    flex-wrap: wrap;      /* ⬅ allows items to jump to next line */
+    gap: 15px;            /* ⬅ spacing between dropdowns */
+    align-items: center;
+    justify-content: center; /* optional: centers them nicely */
+}
+.inputContainer{
+    height: 22%;
+    width: 95%;
+    background-color: #3b4754;
+    display:flex;
+    flex-direction: column;
+}
+.input {
+    height: 75%;
+    width: 80%;
+    border: none;
+    border-radius: 9px;
+
+    /* 🔍 Add search icon */
+    background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' fill='white' viewBox='0 0 24 24'><path d='M21 20l-5.6-5.6a7 7 0 10-1.4 1.4L20 21l1-1zM4 10a6 6 0 1112 0 6 6 0 01-12 0z'/></svg>") 
+            no-repeat 10px center;
+    background-size: 18px;
+
+    /* Add padding so text doesn't overlap the icon */
+    padding-left: 40px;
+    background-color: #1d1b36;
+    color: white;
+
 }
