--- a/src/pages/page_not_found/404.module.css
+++ b/src/pages/page_not_found/404.module.css
@@ -1,7 +1,3 @@
-*{
-    color: white;
-}
-
 .notFoundPage{
     padding: 0;
     margin: 0;
@@ -26,13 +22,13 @@
     gap: 30px;
 }
 
-h1{
+.bodyDiv h1{
     padding: 0;
     margin: 0;
     font-size: 1.8em;
 }
 
-h5{
+.bodyDiv h5{
     color: #9dabb9;
     font-size: 0.9em;
 }
