--- a/src/pages/receptionist_pages/doctor_management/add_new_doc_sec.module.css
+++ b/src/pages/receptionist_pages/doctor_management/add_new_doc_sec.module.css
@@ -243,7 +243,7 @@
     }
 }
 
-@media (max-height: 670px){
+@media (max-height: 755px){
     .bottomButtons{
         display: none;
     }
@@ -279,6 +279,12 @@
 
     .sections .sectionBodyContainer{
         border-bottom: none;
+    }
+}
+
+@media (max-height: 680px){
+    .sections .sectionBodyContainer{
+        max-height: 200px;
     }
 }
 
