hosp_settings dev'ing part 3

--- a/src/pages/receptionist_pages/hospital_settings/settings_sidebar.module.css
+++ b/src/pages/receptionist_pages/hospital_settings/settings_sidebar.module.css
@@ -82,7 +82,7 @@
 
 .sidebar .utilities .backBtn i,
 .sidebar .utilities .backBtn span{
-    color: rgb(255, 29, 29);
+    color: #ff5f5f;
 }
 
 .sidebar .utilities .activePage{
