--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body{
     padding: 0;
     height: 100dvh;
     width: 100dvw;
-    font-family: 'arial';
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #root{
@@ -43,4 +43,17 @@ body{
 
 .warningDiv .text{
     color: red;
+}
+
+::-webkit-scrollbar {
+    width: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
 }
