--- a/src/pages/receptionist_pages/hospital_settings/hospital_settings.module.css
+++ b/src/pages/receptionist_pages/hospital_settings/hospital_settings.module.css
@@ -5,6 +5,8 @@
     width: 100dvw;
     margin: 0;
     padding: 0;
+    background-color: #121417;
+    overflow-y: hidden;
 }
 
 .sectionBody{
@@ -12,5 +14,22 @@
     height: auto;
     padding: 0;
     margin: 0;
-    background-color: #121417;
+    padding: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    overflow-y: auto;
+    max-height: 100%;
+}
+
+/* Media Queries */
+
+@media (max-width: 600px){
+    .hospitalSettingsPage{
+        display: flex;
+        flex-direction: column;
+        height: 100dvh;
+        width: 100dvw;
+        margin: 0;
+        padding: 0;
+    }
 }
