--- a/src/pages/receptionist_pages/hospital_settings/sections/op_timings/op_for_week.module.css
+++ b/src/pages/receptionist_pages/hospital_settings/sections/op_timings/op_for_week.module.css
@@ -25,6 +25,10 @@
     margin: 0;
 }
 
+.head label{
+    cursor: pointer;
+}
+
 .week input{
     width: calc(100% - 24px);
     border-radius: 8px;
@@ -48,4 +52,44 @@
 
 .head input{
     width: auto;
+}
+
+/* Media Queries */
+
+@media (max-width: 520px){
+    .week{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-between;
+        padding-left: 24px;
+        padding-right: 24px;
+        width: calc(100% - 48px);
+        border-bottom: 1px solid #3b4754bb;
+        padding-bottom: 16px;
+        gap: 8px;
+    }
+
+    .week div{
+        width: 100%;
+    }
+
+    .tail input{
+        padding: 8px;
+    }
+}
+
+@media (max-width: 480px){
+    .week{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-between;
+        padding-left: 16px;
+        padding-right: 16px;
+        width: calc(100% - 32px);
+        border-bottom: 1px solid #3b4754bb;
+        padding-bottom: 16px;
+        gap: 8px;
+    }
 }
