--- a/src/pages/receptionist_pages/hospital_settings/sections/op_timings/op_timings.module.css
+++ b/src/pages/receptionist_pages/hospital_settings/sections/op_timings/op_timings.module.css
@@ -12,6 +12,35 @@
     letter-spacing: 0.7px;
 }
 
+.header{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.backBtn{
+    background-color: transparent;
+    border: none;
+    width: auto;
+    height: 100%;
+    cursor: pointer;
+}
+
+.backBtn i, .backBtn span{
+    color: #ff5f5f;
+}
+
+.generalScreen h5{
+    font-size: 0.8em;
+    letter-spacing: 0.5px;
+    color: #9dabb9;
+    margin: 0;
+    margin-top: 12px;
+    margin-bottom: 12px;
+    margin-left: 24px;
+}
+
 .opdepTimings, .opHolidayCalendar, .specialServices{
     width: calc(100% - 40px);
     height: auto;
@@ -30,7 +59,8 @@
     font-size: 0.95em;
     color: #e2e8f0;
     letter-spacing: 0.6px;
-    margin: 12px;
+    margin: 8px;
+    margin-left: 12px;
 }
 
 .bottomBtns{
@@ -52,4 +82,64 @@
     border-radius: 8px;
     background-color: #137fec;
     color: #e2e8f0;
+    cursor: pointer;
+}
+
+.opHolidayCalendar .opHolidayHeader,
+.specialServices .spServicesHeader{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.opHolidayCalendar .opHolidayHeader button,
+.specialServices .spServicesHeader button{
+    margin-right: 24px;
+    width: auto;
+    height: auto;
+    padding: 8px;
+    padding-left: 12px;
+    padding-right: 12px;
+    border: none;
+    border-radius: 8px;
+    background-color: #137fec;
+    color: #e2e8f0;
+    cursor: pointer;
+}
+
+.bufferDiv{
+    width: 100%;
+    height: 100px;
+}
+
+.whenNarrow{
+    display: none;
+}
+
+/* Media Queries */
+
+@media (max-width: 480px){
+
+    .bottomBtns{
+        width: calc(100% - 32px);
+        padding: 16px;
+    }
+
+    .opHolidayCalendar .opHolidayHeader button,
+    .specialServices .spServicesHeader button{
+        margin-right: 16px;
+    }
+
+    .generalScreen h5{
+        margin-left: 16px;
+    }
+
+    .whenNarrow{
+        display: block;
+    }
+
+    .whenWide{
+        display: none;
+    }
 }
