--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ body{
     padding-bottom: 5px;
     background-color: rgba(245, 95, 95, 0.377);
     color: red;
-    font-size: 16px;
+    font-size: 0.95em;
     font-weight: 200;
     border: 0.5px solid red;
     border-radius: 8px;
@@ -43,6 +43,7 @@ body{
 
 .warningDiv .text{
     color: red;
+    letter-spacing: 0.8px;
 }
 
 ::-webkit-scrollbar {
