--- a/src/pages/receptionist_pages/hospital_settings/sections/general/general.module.css
+++ b/src/pages/receptionist_pages/hospital_settings/sections/general/general.module.css
@@ -89,3 +89,31 @@
     color: #9dabb9;
     margin: 0;
 }
+
+.wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.wrapper .savBtn{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+    text-align: right;
+}
+
+.savBtn button{
+    width: auto;
+    height: auto;
+    background-color: #137fec;
+    border: none;
+    border-radius: 8px;
+    padding: 8px;
+    padding-left: 16px;
+    padding-right: 16px;
+    color: #e2e8f0;
+}
