--- a/src/reusable_components/receptionist_sidebar/receptionist_sidebar.module.css
+++ b/src/reusable_components/receptionist_sidebar/receptionist_sidebar.module.css
@@ -42,6 +42,12 @@
     background-color: #2a2f36;
 }
 
+.hospitalBranding .logo img{
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+}
+
 .hospitalBranding .hospitalName h4{
     font-size: 0.8em;
     letter-spacing: 0.8px;
