--- a/src/pages/receptionist_pages/hospital_settings/sections/general/general.module.css
+++ b/src/pages/receptionist_pages/hospital_settings/sections/general/general.module.css
@@ -64,6 +64,50 @@
     margin-bottom: 10px;
 }
 
+.hospitalInfo .logoContainer{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    width: auto;
+    height: auto;
+    gap: 5rem;
+}
+
+.hospitalInfo .logoDiv{
+    margin: 0;
+    padding: 0;
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
+    background-color: #2a2f36;
+}
+
+.hospitalInfo .logoDiv img{
+    height: 70px;
+    width: 70px;
+    margin: 0;
+    padding: 0;
+    border-radius: 50%;
+}
+
+.hospitalInfo .logoContainer button{
+    width: auto;
+    height: auto;
+    background-color: #137fec;
+    border: none;
+    border-radius: 8px;
+    padding: 8px;
+    padding-left: 16px;
+    padding-right: 16px;
+    color: #e2e8f0;
+    cursor: pointer;
+}
+
+.generalScreen .whenNarrow{
+    display: none;
+}
+
 .hospitalInfo h5, .contactInfo h5{
     font-size: 0.8em;
     letter-spacing: 0.5px;
@@ -116,4 +160,42 @@
     padding-left: 16px;
     padding-right: 16px;
     color: #e2e8f0;
+    cursor: pointer;
+}
+
+.savBtn button:disabled {
+    background-color: rgba(77, 163, 255, 0.6);
+    cursor: not-allowed;
+}
+
+.savBtn button:active {
+    background-color: #4da3ff;
+    opacity: 0.8;
+}
+
+.bufferDiv{
+    width: 100%;
+    height: 100px;
+}
+
+/* Media Queries */
+
+@media (max-width: 440px){
+    .generalScreen .whenWide{
+        display: none;
+    }
+
+    .generalScreen .whenNarrow{
+        display: block;
+    }
+
+    .hospitalInfo .logoContainer{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-start;
+        width: auto;
+        height: auto;
+        gap: 3rem;
+    }
 }
