--- a/src/pages/home_page/home_page.module.css
+++ b/src/pages/home_page/home_page.module.css
@@ -38,6 +38,12 @@
     background-color: #2a2f36;
 }
 
+.header .branding .logo img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
 .homePage h3{
     font-size: 0.9em;
     letter-spacing: 0.4px;
@@ -115,6 +121,7 @@
 }
 
 .body button{
+    margin-top: 16px;
     padding-left: 16px;
     padding-right: 16px;
     padding: 8px;
